--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-router-hash-link": "^2.4.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
